--- a/global.css
+++ b/global.css
@@ -13,7 +13,7 @@ main {
     max-width: 1920px;
     margin: 0 auto;
     height: auto;
-  }
+}
 
 .left_Container {
     position: relative;
@@ -26,7 +26,7 @@ main {
     min-width: 360px;
     height: 100vh;
     padding: 32px;
-  }
+}
 
 .right_Container {
     position: relative;
@@ -36,7 +36,7 @@ main {
     width: 100%;
     max-width: 55%;
     height: 100vh;
-  }
+}
 
 .lineWrapper {
     position: relative;
@@ -52,7 +52,7 @@ main {
     width: 100%;
     height: 1px;
     background-color: #edebf0;
-  }
+}
 
 .lineWrapper > p {
     position: absolute;
@@ -64,26 +64,29 @@ main {
     line-height: 23px;  /* wysokość pola liniowego albo ramek dla block */
     font-size: 16px;
     font-weight: 400;
-  }
-  .logotyp {
+}
+
+.logotyp {
     position: absolute;
     z-index:3; /* kontrola warstw wyświetlania */
-  }
+}
 
-  .input{
+.input{
     position : relative;
-  }
+    width: 100%;
+    margin-top: 26px;
+}
 
-  .input > input {
+.input > input {
     border: 1px solid #edebf0;
     border-radius: 7px;
     width: 100%;
     height: 56px;
     padding-left: 20px;
     font-size: 16px;
-  }
+}
 
-  .label {
+.label {
     position: absolute;
     left: 6px;
     top: -10px;
@@ -93,20 +96,34 @@ main {
     font-size: 10px;
     line-height: 20px;
     color: #64606a;
-  }
+}
 
-  #firstNameError {
+#firstNameError {
     display: none;
-  }
+}
 
-  #lastNameError {
+#lastNameError {
     display: none;
-  }
+}
 
-  #emailError {
+#emailError {
     display: none;
-  }
+}
 
-  #passwordError {
+#passwordError {
     display: none;
-  }
+}
+
+#termsError {
+    display: none;
+}
+
+::-webkit-scrollbar {
+    width: 6px;
+    background-color: #f5f5f5;
+}
+  
+::-webkit-scrollbar-thumb {
+    border-radius: 6px;
+    background-color: #ff6939;
+}
