--- a/index.css
+++ b/index.css
@@ -4,3 +4,131 @@
     background-image: url("./images/png/background1.png");
     background-size: cover; /* skalowalność obrazka do rozmiaru pojemnika */
 }
+
+.item_register {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    max-width: 528px;
+    font-size: 24px;
+}
+
+.item_register > button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 2px solid #284642;
+    border-radius: 7px;
+    height: 50px;
+    margin-bottom: 16px;
+    background-color: white;
+    font-size: 14px;
+    font-weight: 600;
+}
+
+.item_register > p {
+    margin-bottom: 48px;
+    margin-top: 88px;
+    font-weight: bold;
+    color: #190f27;
+}
+
+.nameBox {
+    display: flex;
+    column-gap: 24px;   /* ustawia odstęp między kolumnami */
+    width: 100%;
+}
+
+/* drugi button z koleii w item_register */
+.item_register button:nth-of-type(2) {
+    margin-bottom: 32px;
+}
+
+.item_register > button > img {
+    padding-right: 20px;
+}
+
+.pierwszy {
+    margin-bottom: 36px;
+}
+
+.drugi {
+    margin-top: 20px;
+    margin-bottom: 16px;
+}
+
+.checkbox {
+    display: flex;
+    align-items: center;
+    margin-top: 16px;
+}
+
+#terms {     /* znikamy oryginalnego checkbox'a */
+    display: none;
+}
+
+label[for="terms"] {
+    position: relative;
+    display: inline-block; /* ustawiamy element jako blokowy, który zachowuje się jak inline */
+    margin-right: 10px;
+    padding-left: 30px;
+    cursor: pointer;
+    user-select: none; /* brak możliwości zaznaczenia tekstu, np. celem skopiiowania */
+    font-size: 14px;
+    color: #64606a;
+}
+
+/* rysujemy własnego checkboxa */
+label[for="terms"]::before { 
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 50%;
+    display: inline-block;
+    transform: translateY(-50%); /* 50% swojej wysokości do góry */
+    border: 2px solid #aaa;
+    border-radius: 3px;
+    width: 20px;
+    height: 20px;
+}
+
+/* rysujemy "fajeczkę" albo "serduszko" */
+input[type="checkbox"]:checked + label[for="terms"]::before {
+    content: "\2713";        /* 2661"; */
+    background-color: #284642;
+    text-align: center;
+    font-size: 16px;
+    line-height: 20px;
+    color: #fff;
+}
+
+a {
+    color: #64606a;
+    font-size: 14px;
+}
+
+.login-in {
+    color: #64606a;
+    font-size: 14px;
+}
+
+.submit {
+    border: none;
+    border-radius: 7px;
+    margin-top: 26px;
+    width: 100%;
+    height: 50px;
+    background-color: #ff6939;
+    font-size: 18px;
+    font-weight: bold;
+    color: #190f27;
+}
+
+#submit {
+    margin-top: 24px;
+}
+
+#password {
+    margin-bottom: 10px;
+}
