--- a/index.css
+++ b/index.css
@@ -119,7 +119,7 @@ a {
     margin-top: 26px;
     width: 100%;
     height: 50px;
-    background-color: #ff6939;
+    background-color:#ff6939;
     font-size: 18px;
     font-weight: bold;
     color: #190f27;
@@ -130,5 +130,26 @@ a {
 }
 
 #password {
-    margin-bottom: 10px;
+    margin-bottom: 7px;
+}
+
+button {
+    cursor: pointer;
+}
+
+.widoczny {
+    display: block;
+}
+
+@media (max-width: 600px) {
+
+    a {
+        font-size: 12px;
+    }
+    label[for="terms"]  {
+        font-size: 12px;
+    }
+    .item_register {
+        font-size: 12px;
+    }
 }
