--- a/login.css
+++ b/login.css
@@ -1,7 +1,7 @@
 .background {
     width: 100%;
     height: 100%;
-    background-image: url("./images/png/background1.png");
+    background-image: url("./images/png/image69.png");
     background-size: cover; /* skalowalność obrazka do rozmiaru pojemnika */
 }
 
@@ -28,6 +28,7 @@
 }
 
 .item_register > p {
+    font-size: 24px;
     margin-bottom: 48px;
     margin-top: 88px;
     font-weight: bold;
@@ -58,17 +59,13 @@
     margin-bottom: 16px;
 }
 
-.checkbox {
-    display: flex;
-    align-items: center;
-    margin-top: 16px;
-}
 
-#terms {     /* znikamy oryginalnego checkbox'a */
+
+#zapamietajMnie {     /* znikamy oryginalnego checkbox'a */
     display: none;
 }
 
-label[for="terms"] {
+label[for="zapamietajMnie"] {
     position: relative;
     display: inline-block; /* ustawiamy element jako blokowy, który zachowuje się jak inline */
     margin-right: 10px;
@@ -80,7 +77,7 @@ label[for="terms"] {
 }
 
 /* rysujemy własnego checkboxa */
-label[for="terms"]::before { 
+label[for="zapamietajMnie"]::before { 
     content: "";
     position: absolute;
     left: 0;
@@ -94,7 +91,7 @@ label[for="terms"]::before {
 }
 
 /* rysujemy "fajeczkę" albo "serduszko" */
-input[type="checkbox"]:checked + label[for="terms"]::before {
+input[type="checkbox"]:checked + label[for="zapamietajMnie"]::before {
     content: "\2713";        /* 2661"; */
     background-color: #284642;
     text-align: center;
@@ -106,6 +103,11 @@ input[type="checkbox"]:checked + label[for="terms"]::before {
 a {
     color: #64606a;
     font-size: 14px;
+}
+
+/* to jest z myśli */
+label > a {
+    margin-left: 135px;
 }
 
 .login-in {
@@ -141,15 +143,24 @@ button {
     display: block;
 }
 
+.checkboxBox {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 16px;
+    width: 100%;
+}
+
 @media (max-width: 600px) {
 
     a {
         font-size: 12px;
     }
-    label[for="terms"]  {
+    label[for="zapamietajMnie"]  {
         font-size: 12px;
     }
     .item_register {
         font-size: 12px;
     }
 }
+
