--- a/global.css
+++ b/global.css
@@ -118,6 +118,21 @@ main {
     display: none;
 }
 
+.validationError {
+    display: none;
+    font-size: 10px;
+    margin-top: 10px;
+    color: #ce0737;
+}
+
+.input .error {
+    border: 1px solid #ce0737;
+}
+
+.widoczny {
+    display: block;
+}
+
 ::-webkit-scrollbar {
     width: 6px;
     background-color: #f5f5f5;
