add setWinFn() setLosFn() in rejestracja.js

--- a/przechowalnia.css
+++ b/przechowalnia.css
@@ -1,5 +1,5 @@
-/* W tym pliku będą różne klasy z wyobraźni Mariusza, 
-które pewnie jeszcze się przydadzą i ich sensu się dowiemy ;) */
+/* In this file there will be various classes from Mariusz's imagination,
+which will probably still be useful and we will find out their meaning ;) */
 
 .title {
     margin-bottom: 16px;
