--- a/global.css
+++ b/global.css
@@ -13,14 +13,14 @@
 
 * {
     margin: 0;
-    box-sizing: border-box; /* border dziecka zawiera się w borderze rodzica */
+    box-sizing: border-box; /* the child's border is contained within the parent's border */
     font-family: "Rubik", sans-serif;
 }
 
 main {
     display: flex;
-    overflow: hidden; /* to co się nie mieści to jest zakryte */
-    transition: 0.2s; /* przejście można sterować 4 spr. w tym czasem */
+    overflow: hidden; 
+    transition: 0.2s; 
     max-width: 1920px;
     margin: 0 auto;
     height: auto;
@@ -31,7 +31,7 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
-    overflow: auto; /* z pionowym scrollbarem */
+    overflow: auto; /* with scrollbar */
     width: 100%;
     max-width: 45%;
     min-width: 360px;
@@ -56,18 +56,18 @@ main {
     height: 23px;
 }
 
-.pierwszy {
+.first {
     margin-bottom: 36px;
 }
 
-.drugi {
+.second {
     margin-top: 20px;
     margin-bottom: 16px;
 }
 
 
 
-.lineWrapper::before {    /* ::before - tworzy wirtualny element wraz z zawartocią */
+.lineWrapper::before {    /* ::before - creates a virtual item along with its content */
     content: "";       
     position: absolute;
     top: 50%;
@@ -80,10 +80,10 @@ main {
     position: absolute;
     left: 50%;
     display: block;
-    transform: translate(-50%); /* cofa element o 50% własnej długości */
+    transform: translate(-50%); 
     margin: 0 auto;
     background-color: white;
-    line-height: 23px;  /* wysokość pola liniowego albo ramek dla block */
+    line-height: 23px;  /* the height of the inline box or frames for block */
     font-size: 16px;
     font-weight: 400;
 }
@@ -127,8 +127,8 @@ main {
     color: #ce0737;
 }
 
-/* .input .error {} - oznacza, że reguła CSS odnosi się do elementów, które należą do obu podanych klas.  */
-/* W tym przypadku .input .error {} odnosi się do elementów, które mają zarówno klasę "input" jak i "error" */
+/* .input .error {} - means that the CSS rule applies to elements that belong to both specified classes.  */
+
 .input .error {
     border: 1px solid #ce0737;
 }
@@ -145,9 +145,9 @@ main {
     background-color: #ff6939;
 }
 
-@media (max-width: 600px) {     /* poniżej 600px obowiązują wartości z @media */
+@media (max-width: 600px) {     
 
-    .lineWrapper > p {          /* zmniejsza litery w napisie ---- Lub za pomocą maila ---- */
+    .lineWrapper > p {         
         font-size: 10px;
     }
     main {
@@ -156,8 +156,8 @@ main {
         height: auto;
     }
     .right_Container {
-        justify-content: start;     /* ustawia wzdłuż osi głównej */
-        align-items: start;         /* ustawia wzdłuż osi poprzecznej do głównej */
+        justify-content: start;    
+        align-items: start;         
         max-width: 100%;
         max-height: 250px;
         height: 50vh;
@@ -175,9 +175,9 @@ main {
 
 }
 
-@media (max-width: 900px) {     /* poniżej 900px obowiązują wartości z @media */
+@media (max-width: 900px) {     
 
-    .logotyp > img {            /* zmienia wysokość logotypu i ustala marginesy */
+    .logotyp > img {            
         margin: 32px;
         height: 150px;
     }
@@ -247,12 +247,13 @@ input:focus {
   }
   
 .los {
-    color: red;
+    color: rgb(52, 4, 4);
     opacity: 0;
 }
 
 
 .popUp {
+    display: block;
     position: fixed; /* permanent place */
     top: 50%;
     left: 50%;
@@ -272,8 +273,11 @@ input:focus {
 }
 
 .blur {
-    filter: blur(13px);
+    filter: blur(8px);
     pointer-events: none;
-  }
-  
+}
+
+.opacityUp {
+    opacity: 1;
+}
 
