--- a/logowanie.css
+++ b/logowanie.css
@@ -2,7 +2,7 @@
     width: 100%;
     height: 100%;
     background-image: url("./images/png/image69.png");
-    background-size: cover; /* skalowalność obrazka do rozmiaru pojemnika */
+    background-size: cover; /* scalability of the image to the size of the container */
 }
 
 .item_register {
@@ -37,11 +37,11 @@
 
 .nameBox {
     display: flex;
-    column-gap: 24px;   /* ustawia odstęp między kolumnami */
+    column-gap: 24px;   /* sets the spacing between columns */
     width: 100%;
 }
 
-/* drugi button z kolei w item_register */
+/* second button in turn in item_register */
 .item_register button:nth-of-type(2) {
     margin-bottom: 32px;
 }
@@ -50,47 +50,47 @@
     padding-right: 20px;
 }
 
-.pierwszy {
+.first {
     margin-bottom: 36px;
 }
 
-.drugi {
+.second {
     margin-top: 20px;
     margin-bottom: 16px;
 }
 
 
 
-#zapamietajMnie {     /* znikamy oryginalnego checkbox'a */
+#zapamietajMnie {     /* the original checkbox disappears */
     display: none;
 }
 
 label[for="zapamietajMnie"] {
     position: relative;
-    display: inline-block; /* ustawiamy element jako blokowy, który zachowuje się jak inline */
+    display: inline-block; /* we set the element as block, which behaves like inline */
     margin-right: 10px;
     padding-left: 30px;
     cursor: pointer;
-    user-select: none; /* brak możliwości zaznaczenia tekstu, np. celem skopiiowania */
+    user-select: none; /* inability to select text, e.g. for copying */
     font-size: 14px;
     color: #64606a;
 }
 
-/* rysujemy własnego checkboxa */
+/* we draw our own checkbox */
 label[for="zapamietajMnie"]::before { 
     content: "";
     position: absolute;
     left: 0;
     top: 50%;
     display: inline-block;
-    transform: translateY(-50%); /* 50% swojej wysokości do góry */
+    transform: translateY(-50%); /* 50% of your height up */
     border: 2px solid #aaa;
     border-radius: 3px;
     width: 20px;
     height: 20px;
 }
 
-/* rysujemy "fajeczkę" albo "serduszko" */
+/* draw a "pipe" or "heart" */
 input[type="checkbox"]:checked + label[for="zapamietajMnie"]::before {
     content: "\2713";        /* 2661"; */
     background-color: #284642;
@@ -105,7 +105,7 @@ a {
     font-size: 14px;
 }
 
-/* to jest z myśli */
+
 label > a {
     margin-left: 135px;
 }
