--- a/rejestracja.css
+++ b/rejestracja.css
@@ -2,7 +2,7 @@
     width: 100%;
     height: 100%;
     background-image: url("./images/png/background1.png");
-    background-size: cover; /* skalowalność obrazka do rozmiaru pojemnika */
+    background-size: cover; 
 }
 
 .item_register {
@@ -36,11 +36,11 @@
 
 .nameBox {
     display: flex;
-    column-gap: 24px;   /* ustawia odstęp między kolumnami */
+    column-gap: 24px;   
     width: 100%;
 }
 
-/* drugi button z kolei w item_register */
+
 .item_register button:nth-of-type(2) {
     margin-bottom: 32px;
 }
@@ -49,11 +49,11 @@
     padding-right: 20px;
 }
 
-.pierwszy {
+.first {
     margin-bottom: 36px;
 }
 
-.drugi {
+.second {
     margin-top: 20px;
     margin-bottom: 16px;
 }
@@ -64,36 +64,36 @@
     margin-top: 16px;
 }
 
-#terms {     /* znikamy oryginalnego checkbox'a */
+#terms {    
     display: none;
 }
 
 label[for="terms"] {
     position: relative;
-    display: inline-block; /* ustawiamy element jako blokowy, który zachowuje się jak inline */
+    display: inline-block; 
     margin-right: 10px;
     padding-left: 30px;
     cursor: pointer;
-    user-select: none; /* brak możliwości zaznaczenia tekstu, np. celem skopiiowania */
+    user-select: none; 
     font-size: 14px;
     color: #64606a;
 }
 
-/* rysujemy własnego checkboxa */
+
 label[for="terms"]::before { 
     content: "";
     position: absolute;
     left: 0;
     top: 50%;
     display: inline-block;
-    transform: translateY(-50%); /* 50% swojej wysokości do góry */
+    transform: translateY(-50%); 
     border: 2px solid #aaa;
     border-radius: 3px;
     width: 20px;
     height: 20px;
 }
 
-/* rysujemy "fajeczkę" albo "serduszko" */
+
 input[type="checkbox"]:checked + label[for="terms"]::before {
     content: "\2713";        /* 2661"; */
     background-color: #284642;
